2008-04-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/shadow/ccm-shadow.c:
    * src/async-getprop.c:
    * src/cairo-compmgr.c:
    * src/ccm-display.c:
    * src/ccm-drawable.c:
    * src/ccm-screen.c:
    * src/ccm-window-glitz.c:
    * src/ccm-window.c:
    * src/ccm-window.h
    * src/ccm.h: Merge with test and debug branches, fix many redraw, perfomance
                 and crash issues and add support for openbox window manager, 
                 start the road for 0.2.0 release :).

2008-04-18  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/async-getprop.c:
    * src/ccm-debug.c:
    * src/ccm-drawable.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Fix a crash on get property async, add debug time.

2008-04-17  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c: Damage all screen on window unmap since we don't found
                        why window geometry is invalidon unmap.

2008-04-17  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/async-getprop.c:
    * src/ccm-debug.c:
    * src/ccm-debug.h:
    * src/ccm-drawable.c:
    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm-window.h: Fix few redraw issues.

2008-04-16  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm-window.c: Fix a crash if XQueryTree fail, fix some forgotten 
                        damage.

2008-04-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/Makefile.am:
    * src/ccm-debug.c:
    * src/ccm-debug.h: Add debug functions

    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm-window.h:
    * src/ccm.h: Fix damage on window switch + code cleanup

2008-04-14  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/menu-animation/ccm-menu-animation.c:
    * src/ccm-drawable.c:
    * src/ccm-screen.c:
    * src/ccm-screen.h: