@@ -1,3 +1,8 @@
+2008-04-22  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * plugins/mosaic/ccm-mosaic.c: Add broadcast send event.
+    * src/async-getprop.c: Fix crash, data must be eaten on each reply.
+
 2008-04-21  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * plugins/magnifier/ccm-magnifier.c:
